--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,17 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
+
+#spring:
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/{DB_NAME}
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    username: root
+#    password: 1234
+#  jpa:
+#    hibernate:
+#      ddl-auto: update
+#    show-sql: true
+#    properties:
+#      hibernate:
+#        format_sql: true
